[gd_scene load_steps=5 format=3 uid="uid://i8imh00816ed"]

[ext_resource type="PackedScene" uid="uid://bheakgcv4xagd" path="res://scenes/square_button.tscn" id="1_3lgix"]
[ext_resource type="Script" path="res://scripts/in_game_ui.gd" id="1_cwecn"]
[ext_resource type="PackedScene" uid="uid://c6hni3b7plbif" path="res://scenes/pause_scene.tscn" id="3_gqwsv"]
[ext_resource type="PackedScene" uid="uid://bbgcre5xiw6yy" path="res://scenes/dialog_box.tscn" id="4_qyeie"]

[node name="InGameUI" type="CanvasLayer"]
follow_viewport_enabled = true
script = ExtResource("1_cwecn")

[node name="UI" type="MarginContainer" parent="."]
offset_left = -959.0
offset_top = -535.0
offset_right = -879.0
offset_bottom = -452.0
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="HBoxContainer" type="HBoxContainer" parent="UI"]
layout_mode = 2
theme_override_constants/separation = 1720

[node name="BackButton" parent="UI/HBoxContainer" instance=ExtResource("1_3lgix")]
layout_mode = 2
texture_file = "res://assets/GUI/Button/Icon/ArrowLeft-Thin.png"

[node name="PauseButton" parent="UI/HBoxContainer" instance=ExtResource("1_3lgix")]
layout_mode = 2
texture_file = "res://assets/GUI/Button/Icon/Pause.png"

[node name="PauseScene" parent="." instance=ExtResource("3_gqwsv")]
process_mode = 3

[node name="DialogBox" parent="." instance=ExtResource("4_qyeie")]
process_mode = 3
dialog_text = "Are you sure? All progress will be lost."
dialog_box_size = Vector2(650, 400)

[connection signal="clicked" from="UI/HBoxContainer/BackButton" to="." method="go_to_level_selector"]
[connection signal="clicked" from="UI/HBoxContainer/PauseButton" to="." method="_on_pause_button_clicked"]
[connection signal="level_selector" from="PauseScene" to="." method="go_to_level_selector"]
[connection signal="play" from="PauseScene" to="." method="_on_pause_scene_play"]
[connection signal="restart" from="PauseScene" to="." method="_on_pause_scene_restart"]
[connection signal="primary_button_clicked" from="DialogBox" to="." method="_on_dialog_box_primary_button_clicked"]
[connection signal="secondary_button_clicked" from="DialogBox" to="." method="_on_dialog_box_secondary_button_clicked"]
